# threema-bot-sdk

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: echo_bot.rs
src/: client.rs  commands.rs  config.rs  dedup.rs  errors.rs  lib.rs  rate_limit.rs  webhook.rs
src/server/: handler.rs  mod.rs
src/snapshots/: threema_gateway_bot__commands__tests__help_text__with_custom_commands.snap  threema_gateway_bot__commands__tests__help_text__with_description.snap  threema_gateway_bot__commands__tests__help_text__with_prelude.snap  threema_gateway_bot__commands__tests__help_text__without_description.snap  threema_gateway_bot__commands__tests__help_text__word_style.snap
