[package]
name = "threema-gateway-bot"
version = "0.1.0"
authors = ["Threema GmbH <opensource@threema.ch>"]
documentation = "https://docs.rs/threema-gateway-bot"
repository = "https://github.com/threema-ch/threema-gateway-bot/"
license = "MIT OR Apache-2.0"
description = "Library for building Threema Gateway bots."
readme = "README.md"
keywords = ["threema", "bot", "server", "gateway", "messaging"]
categories = ["web-programming", "web-programming::http-server"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
config = "0.14"
crypto_box = { version = "0.9", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
mime = "0.3"
moka = { version = "0.12", features = ["future", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
threema-gateway = { version = "0.20", features = ["public-key-cache-inmemory"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
insta = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
deprecated_safe = "warn"
explicit_outlives_requirements = "warn"
# Wait for https://github.com/rust-lang/rust/issues/130351
# fuzzy_provenance_casts = "warn"
impl_trait_overcaptures = "warn"
# Wait for https://github.com/rust-lang/rust/issues/130351
# lossy_provenance_casts = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
# Wait for https://github.com/rust-lang/rust/issues/89554
# non_exhaustive_omitted_patterns = "warn"
non_local_definitions = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
# Disabled due to https://github.com/rust-lang/rust/issues/95513
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"

# Commented lints are in a newer Clippy version or tied to unstable and we want
# to try them ASAP.
#
# We enable all groups by default except `Restriction` from which we explicitly
# pick the rules we want to enable.
[lints.clippy]
# Pedantic
pedantic = "warn"
collapsible_if = { level = "allow", priority = 1 }
collapsible_else_if = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }
# Restriction
allow_attributes = { level = "warn", priority = 1 }
allow_attributes_without_reason = { level = "warn", priority = 1 }
arithmetic_side_effects = { level = "warn", priority = 1 }
as_pointer_underscore = { level = "warn", priority = 1 }
as_underscore = { level = "warn", priority = 1 }
big_endian_bytes = { level = "warn", priority = 1 }
cfg_not_test = { level = "warn", priority = 1 }
clone_on_ref_ptr = { level = "warn", priority = 1 }
create_dir = { level = "warn", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }
default_numeric_fallback = { level = "warn", priority = 1 }
deref_by_slicing = { level = "warn", priority = 1 }
doc_include_without_cfg = { level = "warn", priority = 1 }
empty_drop = { level = "warn", priority = 1 }
empty_enum_variants_with_brackets = { level = "warn", priority = 1 }
empty_structs_with_brackets = { level = "warn", priority = 1 }
error_impl_error = { level = "warn", priority = 1 }
exit = { level = "warn", priority = 1 }
filetype_is_file = { level = "warn", priority = 1 }
float_arithmetic = { level = "warn", priority = 1 }
float_cmp_const = { level = "warn", priority = 1 }
fn_to_numeric_cast_any = { level = "warn", priority = 1 }
host_endian_bytes = { level = "warn", priority = 1 }
impl_trait_in_params = { level = "warn", priority = 1 }
indexing_slicing = { level = "warn", priority = 1 }
infinite_loop = { level = "warn", priority = 1 }
integer_division = { level = "warn", priority = 1 }
integer_division_remainder_used = { level = "warn", priority = 1 }
lossy_float_literal = { level = "warn", priority = 1 }
map_with_unused_argument_over_ranges = { level = "warn", priority = 1 }
min_ident_chars = { level = "warn", priority = 1 }
missing_assert_message = { level = "warn", priority = 1 }
mixed_read_write_in_expression = { level = "warn", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_inherent_impl = { level = "warn", priority = 1 }
multiple_unsafe_ops_per_block = { level = "warn", priority = 1 }
mutex_atomic = { level = "warn", priority = 1 }
mutex_integer = { level = "warn", priority = 1 }
needless_raw_strings = { level = "warn", priority = 1 }
non_zero_suggestions = { level = "warn", priority = 1 }
panic = { level = "warn", priority = 1 }
partial_pub_fields = { level = "warn", priority = 1 }
pathbuf_init_then_push = { level = "warn", priority = 1 }
pointer_format = { level = "warn", priority = 1 }
precedence_bits = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
pub_without_shorthand = { level = "warn", priority = 1 }
rc_buffer = { level = "warn", priority = 1 }
rc_mutex = { level = "warn", priority = 1 }
redundant_test_prefix = { level = "warn", priority = 1 }
redundant_type_annotations = { level = "warn", priority = 1 }
ref_patterns = { level = "warn", priority = 1 }
renamed_function_params = { level = "warn", priority = 1 }
rest_pat_in_fully_bound_structs = { level = "warn", priority = 1 }
return_and_then = { level = "warn", priority = 1 }
semicolon_inside_block = { level = "warn", priority = 1 }
single_char_lifetime_names = { level = "warn", priority = 1 }
str_to_string = { level = "warn", priority = 1 }
string_add = { level = "warn", priority = 1 }
string_slice = { level = "warn", priority = 1 }
suspicious_xor_used_as_pow = { level = "warn", priority = 1 }
tests_outside_test_module = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
try_err = { level = "warn", priority = 1 }
undocumented_unsafe_blocks = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unnecessary_safety_comment = { level = "warn", priority = 1 }
unnecessary_safety_doc = { level = "warn", priority = 1 }
unnecessary_self_imports = { level = "warn", priority = 1 }
unneeded_field_pattern = { level = "warn", priority = 1 }
unseparated_literal_suffix = { level = "warn", priority = 1 }
unused_result_ok = { level = "warn", priority = 1 }
unused_trait_names = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }
use_debug = { level = "warn", priority = 1 }
verbose_file_reads = { level = "warn", priority = 1 }
# Cargo
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
